# classification_wizard

./: .replit  Pipfile  README.md  Utils.py  app.py  dt.py  knn.py  lr.py  nb.py  pyproject.toml  requirements.txt  svm.py
