[tool.poetry]
name = "repl_nix_classificationwizard"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
Pillow = "^9.4.0"
plotly = "^5.13.0"
sklearn = "^0.0.post2"
scikit-learn = "^1.2.1"
streamlit = "^1.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
